<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".puntaje.MainActivity2_Puntajes"
    android:id="@+id/MainActivity_Puntajes">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puntaje"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPuntaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pospais"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPosPais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posgeneral"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPosGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/pos"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nombre"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/puntaje"
            android:textColor="@color/purple_500" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/descripcion"
            android:gravity="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDivisor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grisClaro"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearT" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewPais"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearT" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewGeneral"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearT" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/linearPais"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@color/purple_500" />

            <TextView
                android:id="@+id/linearGeneral"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@color/white" />

        </TableRow>

        <!--<TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grisClaro" />

        </TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <Button
                android:id="@+id/btn_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pais"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                android:textSize="12sp"
                android:typeface="sans"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.Button"/>


            <Button
                android:id="@+id/btn_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textColor="@color/letras"
                android:backgroundTint="@color/white"
                android:textSize="12sp"
                android:typeface="sans"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.Button"/>

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>